--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "content_scripts": [
       {
         "matches": ["https://www.binance.com/*"],
-        "js": ["play.js"]
+        "js": ["auto.js"]
       }
     ]
   }
